--- a/treasure.html
+++ b/treasure.html
@@ -15,7 +15,7 @@
     var latlng = new google.maps.LatLng(37.427, -122.172);
     var myOptions = {
       zoom: 15,
-      minZoom: 12, 
+      minZoom: 1, //12
       maxZoom: 18,
       center: latlng,
       mapTypeId: google.maps.MapTypeId.ROADMAP
@@ -25,8 +25,8 @@
 
     // bounds of the desired area
 var allowedBounds = new google.maps.LatLngBounds(
-     new google.maps.LatLng(70.33956792419954, 178.01171875), 
-     new google.maps.LatLng(83.86483689701898, -88.033203125)
+     new google.maps.LatLng(28.70, -127.50), 
+     new google.maps.LatLng(48.85, -55.90)
 );
 var lastValidCenter = map.getCenter();
 
