--- a/treasure.html
+++ b/treasure.html
@@ -7,6 +7,7 @@
   body { height: 100%; margin: 0; padding: 0 }
   #map_canvas { height: 100% }
 </style>
+<script type="text/javascript" src="jquery-1.6.4.js"></script>
 <script type="text/javascript"
     src="http://maps.googleapis.com/maps/api/js?sensor=false">
 </script>
@@ -15,7 +16,7 @@
     var latlng = new google.maps.LatLng(37.427, -122.172);
     var myOptions = {
       zoom: 15,
-      minZoom: 12, //12
+      minZoom: 14,
       maxZoom: 18,
       center: latlng,
       mapTypeId: google.maps.MapTypeId.ROADMAP
@@ -41,6 +42,30 @@ google.maps.event.addListener(map, 'center_changed', function() {
     map.panTo(lastValidCenter);
 });
 
+    // Start of marker code
+    var myLatlng = new google.maps.LatLng(37.42310,-122.16880);
+    var contentString = '<div id="content">'+
+        '<div id="siteNotice">'+
+        '</div>'+
+        '<h1 id="firstHeading" class="firstHeading">Columbae</h1>'+
+        '<div id="bodyContent">'+
+        '<p><b>Columbae</b>, home of the naked people, is also home to Kapil and Alex'+
+        '</div>'+
+        '</div>';
+        
+    var infowindow = new google.maps.InfoWindow({
+        content: contentString,
+        maxWidth: 200
+    });
+
+    var marker = new google.maps.Marker({
+        position: myLatlng,
+        map: map,
+        title: 'Columbae'
+    });
+    google.maps.event.addListener(marker, 'click', function() {
+      infowindow.open(map,marker);
+    });
 
   }
 
