--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   body { height: 100%; margin: 0; padding: 0 }
   #map_canvas { height: 100% }
 </style>
-<script type="text/javascript" src="jquery-1.6.4.js"></script>
+<script type="text/javascript" src="javascripts/jquery-1.6.4.js"></script>
+<script type="text/javascript" src="javascripts/custom.js"></script>
 <script type="text/javascript"
     src="http://maps.googleapis.com/maps/api/js?sensor=false">
 </script>
