--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-<style type="text/css">
-  html { height: 100% }
-  body { height: 100%; margin: 0; padding: 0 }
-  #map_canvas { height: 100% }
-</style>
-<script type="text/javascript" src="javascripts/jquery-1.6.4.js"></script>
-<script type="text/javascript" src="javascripts/main.js"></script>
-<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false">
-</script>
-</head>
-<body>
-  <div id="map_canvas" style="width:100%; height:100%"></div>
-</body>
+    <head>
+        <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+        <link rel="stylesheet" type="text/css" href="stylesheets/styles.css" />
+        <script type="text/javascript" src="javascripts/jquery-1.6.4.js"></script>
+        <script type="text/javascript" src="javascripts/main.js"></script>
+        <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false">
+        </script>
+    </head>
+    <body>
+        <div id="map_canvas" style="width:100%; height:100%"></div>
+    </body>
 </html>
