--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-        <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" />
         <link rel="stylesheet" type="text/css" href="stylesheets/styles.css" />
         <script type="text/javascript" src="javascripts/jquery-1.6.4.js"></script>
         <script type="text/javascript" src="javascripts/main.js"></script>
@@ -11,7 +10,6 @@
     </head>
     <body>
         <div id="map_canvas"></div>
-        <div id="sidebar">
-        </div>
+        <div id="sidebar"></div>
     </body>
 </html>
