--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
         </script>
     </head>
     <body>
-        <div id="map_canvas"></div>
-        <div id="sidebar"></div>
+        <div id="wrapper">
+            <div id="map_wrapper">
+                <div id="map_canvas">
+                </div>
+            </div>
+            <div id="sidebar">
+                I'm a sidebar!
+            </div>
+        </div>
     </body>
 </html>
