--- a/index.html
+++ b/index.html
@@ -15,7 +15,36 @@
                 </div>
             </div>
             <div id="sidebar">
-                I'm a sidebar!
+                <div id="sidebar-content">
+                    <h1>SteamTunnel</h1>
+                    <p>Welcome to SteamTunnel! A student's guide to all the crazy places at Stanford.</p>
+                </div>
+                <ul id="filters">
+                    <li>
+                    <label for="fountain">
+                        <input type="checkbox" id="fountain" checked />
+                        Fountain
+                    </label>
+                    </li>
+                    <li>
+                        <label for="roofs">
+                            <input type="checkbox" id="roofs" checked />
+                            Roofs
+                        </label>
+                    </li>
+                    <li>
+                        <label for="steamtunnels">
+                            <input type="checkbox" id="steamtunnels" checked />
+                            Steam Tunnels
+                        </label>
+                    </li>
+                    <li>
+                        <label for="other">
+                            <input type="checkbox" id="other" />
+                            Other
+                        </label>
+                    </li>
+                </ul>
             </div>
         </div>
     </body>
