--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
         </script>
     </head>
     <body>
+        <!-- Start facebook comments code -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) {return;}
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+        <!-- End facebook comments code -->
+
         <div id="wrapper">
             <div id="map_wrapper">
                 <div id="map_canvas">
@@ -51,6 +62,11 @@
                 <div id="bottom">
                     <a href="#">[ suggest a spot ]</a>
                 </div>
+            </div>
+            <div id="rightbar" style="">
+                <div id="comments_title">I am the rightbar</div>
+                <br/>
+                <div class="fb-comments" data-href="example.com" data-num-posts="2" data-width="300"></div>
             </div>
         </div>
     </body>
