More changes related to FB integration

--- a/index.html
+++ b/index.html
@@ -64,9 +64,13 @@
                 </div>
             </div>
             <div id="rightbar" style="">
-                <div id="comments_title">I am the rightbar</div>
+                <div id="rightbar_title">Welcome to Steamtunnel</div>
+                <div id="rightbar_body">Hey there, here's how you can get started</div>
                 <br/>
-                <div class="fb-comments" data-href="example.com" data-num-posts="2" data-width="300"></div>
+
+                <div class="fb-like" data-href="test_website_url.com#something" data-send="false" data-width="400" data-show-faces="true"></div>
+                <br/>
+                <div class="fb-comments" data-href="test_website_url.com" data-num-posts="2" data-width="400"></div>
             </div>
         </div>
     </body>
