Added Google Analytics code and changed header

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div id="sidebar" style="background-image:url('images/side_gradient.png');">
                 <div id="sidebar-content">
-                    <h1>[ steamtunnel ]</h1>
+                    <h1>[ leland's map ]</h1>
                 </div>
                 <ul id="filters">
                     <li>
@@ -74,4 +74,19 @@
             </div>
         </div>
     </body>
+    <!-- Begin Google Analytics Code-->
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-27148299-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
+    <!-- End Google Analytics code -->
 </html>
