Prettified FB like stuff

--- a/index.html
+++ b/index.html
@@ -59,7 +59,14 @@
                         </label>
                     </li>
                 </ul>
+                <div id="bottom_like_text">
+                    Like us on Facebook:<br/>
+                </div>
+                <div id="bottom_like">
+                    <div class="fb-like" data-href="lelandsmap.com" data-send="false" data-layout="box_count" data-width="50" data-show-faces="true"></div>
+                </div>
                 <div id="bottom">
+                    
                     <a href="#">[ suggest a spot ]</a>
                 </div>
             </div>
@@ -68,9 +75,9 @@
                 <div id="rightbar_body">Hey there, here's how you can get started</div>
                 <br/>
 
-                <div class="fb-like" data-href="test_website_url.com#something" data-send="false" data-width="400" data-show-faces="true"></div>
+                <div class="fb-like" data-href="lelandsmap.com#something" data-send="false" data-width="400" data-show-faces="true"></div>
                 <br/>
-                <div class="fb-comments" data-href="test_website_url.com" data-num-posts="2" data-width="400"></div>
+                <div class="fb-comments" data-href="lelandsmap.com#something" data-num-posts="2" data-width="400"></div>
             </div>
         </div>
     </body>
