Added a top bar, took away the sidebar with filters.
Next: work on making top bar drop-down on mouse-over.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <div id="map_canvas">
                 </div>
             </div>
+            <!--
             <div id="sidebar" style="background-image:url('images/side_gradient.png');">
                 <div id="sidebar-content">
                     <h1>[ leland's map ]</h1>
@@ -36,7 +37,7 @@
                     <li>
                     <label for="fountain">
                     <img src="images/unchecked.png" class="checkbox"/>
-                        <!-- <input type="checkbox" id="fountain" checked /> -->
+                         <input type="checkbox" id="fountain" checked /> 
                         Fountain
                     </label>
                     </li>
@@ -68,6 +69,18 @@
                 <div id="bottom">
                     
                     <a href="#">[ suggest a spot ]</a>
+                </div>
+            </div>
+            -->
+
+            <div id="topbar">
+                <div id="topbar_text"> leland's map </div>
+                <div id="topbar_right"> 
+                    <form method="get" id="search" action="#">
+                            <input type="text" style="width:300px;" value="search" name="s" id="s" onfocus="this.value=''" onblur="this.value='search'"  />
+
+                    </form> 
+                    <!-- <img src = "images/like.png" /> -->
                 </div>
             </div>
             <div id="rightbar" style="">
